Added more solutions